--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,7 @@ mysql:
   port: 3306
   user: "root"
   password: "******"
-  dbname: "sql_demo"
+  dbname: "database-name"
   max_open_conns: 100
   max_idle_conns: 10
 redis:
